[project]
name = "cozy_comm"
description = "Post images and video to Discord. Nodes to facilitate communication using REST."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = [
  "requests", 
  "loguru", 
  "opencv-contrib-python", 
  "discord-webhook"
]

[project.urls]
Repository = "https://github.com/cozy-comfyui/cozy_comm"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Cozy Communication"
Icon = ""
