[project]
name = "cozy_comm"
description = "Post images and video to Discord. Nodes to facilitate communication using REST."
version = "1.0.2"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "discord-webhook>=1.3.1"
    "loguru"
    "opencv-contrib-python"
    "requests>=2.32.3"
]

[project.urls]
Homepage = "https://github.com/cozy-comfyui/cozy_comm"
Documentation = "https://github.com/cozy-comfyui/cozy_comm/wiki"
Repository = "https://github.com/cozy-comfyui/cozy_comm"
Issues = "https://github.com/cozy-comfyui/cozy_comm/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Cozy Communication"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-cozy-comfyui.png"
